--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<meta name="screen-orientation" content="portrait">
   	<!-- QQ强制竖屏 -->
   	<meta name="x5-orientation" content="portrait">
-    <title>商品</title>
+    <title>网上商城</title>
     <!--初始化样式-->
     <style>
         html {overflow-y:scroll;width:100vw;height:100vh;} 
